Fix chat sidebar user modal on mobile

--- a/src/components/scss/ChatSidebar.scss
+++ b/src/components/scss/ChatSidebar.scss
@@ -13,7 +13,6 @@
         padding: 5px 10px;
         cursor: pointer;
 
-
         & img {
             width: 45px;
             height: 45px;
@@ -48,11 +47,17 @@
 }
 
 .SidebarOverlay {
-    // background-color: rgba(255, 0, 0, 0.375);
     z-index: 1100;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+@media (max-width: 1130px) {
+    .SidebarOverlay {
+        background-color: #00000050;
+        backdrop-filter: blur(4px);
+    }
 }
