--- a/src/components/scss/SidebarUserModal.scss
+++ b/src/components/scss/SidebarUserModal.scss
@@ -2,14 +2,14 @@
     z-index: 1200;
     position: absolute;
     top: 0;
-    left: 0;
+    right: 270px !important;
     background-color: #2e2e31;
     box-shadow: -2px 2px 10px 1px #0000006c;
     border-radius: 8px;
     width: 300px;
     color: #fff;
     border: 1px solid #ffffff0d;
-    transform: translateX(calc(-100% - 5px));
+    // transform: translateX(calc(-100% - 5px));
     animation: SlideIn 0.2s;
 
     & .ModalHeader {
@@ -78,9 +78,20 @@
 
 @keyframes SlideIn {
     from {
-        transform: translateX(calc(-100% - 15px));
+        transform: translateX(-10px);
     }
     to {
-        transform: translateX(calc(-100% - 5px));
+        transform: translateX(0px);
+    }
+}
+
+@media (max-width: 1130px) {
+    .MemberModal {
+        width: 90%;
+        right: 50% !important;
+        left: 50% !important;
+        top: 50% !important;
+        transform: translate(-50%, -50%);
+        animation: none;
     }
 }
